--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="Images/png" href="Images/mf_logo.png"/>
+    <link rel="icon" type="images/png" href="images/mf_logo.png"/>
     <title>Muhammad Febriansyah Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link
@@ -216,4 +216,5 @@
 
     <script src="script.js"></script>
   </body>
+
 </html>
